k8s/canteen-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canteen-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canteen-client
  template:
    metadata:
      labels:
        app: canteen-client
    spec:
      containers:
      - name: canteen-client
        image: crymall/canteen-client:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: canteen-client
spec:
  type: ClusterIP
  selector:
    app: canteen-client
  ports:
  - port: 80
    targetPort: 80
