k8s/midden-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: midden-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: midden-client
  template:
    metadata:
      labels:
        app: midden-client
    spec:
      containers:
      - name: midden-client
        image: crymall/midden-client:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: midden-service
spec:
  type: ClusterIP
  selector:
    app: midden-client
  ports:
  - port: 80
    targetPort: 80
