k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workspace-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - midden.reedgaines.com
    - canteen.reedgaines.com
    - netbook.reedgaines.com
    secretName: workspace-tls-secret
  rules:
  - host: midden.reedgaines.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: midden-service
            port:
              number: 80
  - host: canteen.reedgaines.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: canteen-client
            port:
              number: 80
  - host: netbook.reedgaines.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netbook-client
            port:
              number: 80
